--- a/templates/accounts/profile/profile.html
+++ b/templates/accounts/profile/profile.html
@@ -20,7 +20,7 @@
                     <h4 class="card-title">{{ user.get_full_name|default:user.username }}</h4>
                     <p class="text-muted">@{{ user.username }}</p>
                     <p class="card-text">{{ user.bio|default:"No bio provided." }}</p>
-                    <a href="{% url 'update_profile' %}" class="btn btn-primary">
+                    <a href="{% url 'accounts:settings_view' %}#profile" class="btn btn-primary">
                         <i class="fas fa-edit me-2"></i>Edit Profile
                     </a>
                 </div>
