--- a/templates/boards/board_form.html
+++ b/templates/boards/board_form.html
@@ -37,7 +37,7 @@
                         </div>
                         
                         <div class="d-flex justify-content-between">
-                            <a href="{% url 'board_list' %}" class="btn btn-outline-secondary">
+                            <a href="{% url 'boards:board_list' %}" class="btn btn-outline-secondary">
                                 <i class="fas fa-arrow-left me-2"></i>Back
                             </a>
                             <button type="submit" class="btn btn-primary">
