minor bug fixes

--- a/templates/boards/board_detail.html
+++ b/templates/boards/board_detail.html
@@ -187,7 +187,7 @@
                         </button>
                     {% endif %}
                     {% if board.owner == user %}
-                        <a href="{% url 'board_edit' board_id=board.id %}" class="btn btn-outline-secondary">
+                        <a href="{% url 'boards:board_edit' board_id=board.id %}" class="btn btn-outline-secondary">
                             <i class="fas fa-edit me-2"></i>Edit Board
                         </a>
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteBoardModal">
@@ -276,7 +276,7 @@
                 <h5 class="modal-title">Create New Task</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
-            <form method="post" action="{% url 'task_create' %}" id="createTaskForm">
+            <form method="post" action="{% url 'boards:task_create' %}" id="createTaskForm">
                 {% csrf_token %}
                 <div class="modal-body">
                     {% if messages %}
@@ -426,7 +426,7 @@
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                     <i class="fas fa-times me-2"></i>Cancel
                 </button>
-                <form method="post" action="{% url 'board_delete' board_id=board.id %}" class="d-inline">
+                <form method="post" action="{% url 'boards:board_delete' board_id=board.id %}" class="d-inline">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger">
                         <i class="fas fa-trash-alt me-2"></i>Delete Board
