--- a/templates/boards/board_list.html
+++ b/templates/boards/board_list.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="mb-0">My Boards</h1>
-        <a href="{% url 'board_create' %}" class="btn btn-primary">
+        <a href="{% url 'boards:board_create' %}" class="btn btn-primary">
             <i class="fas fa-plus me-2"></i>Create New Board
         </a>
     </div>
@@ -22,7 +22,7 @@
                         <div class="card h-100 board-card">
                             <div class="card-body">
                                 <h5 class="card-title">
-                                    <a href="{% url 'board_detail' board_id=board.id %}" class="text-decoration-none text-dark">
+                                    <a href="{% url 'boards:board_detail' board_id=board.id %}" class="text-decoration-none text-dark">
                                         {{ board.title }}
                                     </a>
                                 </h5>
@@ -54,7 +54,7 @@
                         <div class="card h-100 board-card">
                             <div class="card-body">
                                 <h5 class="card-title">
-                                    <a href="{% url 'board_detail' board_id=board.id %}" class="text-decoration-none text-dark">
+                                    <a href="{% url 'boards:board_detail' board_id=board.id %}" class="text-decoration-none text-dark">
                                         {{ board.title }}
                                     </a>
                                 </h5>
