--- a/templates/teams/invitation_form.html
+++ b/templates/teams/invitation_form.html
@@ -48,7 +48,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <form method="post" action="{% url 'cancel_invitation' invitation_id=invitation.id %}">
+                                <form method="post" action="{% url 'teams:cancel_invitation' invitation_id=invitation.id %}">
                                     {% csrf_token %}
                                     <button type="submit" class="btn btn-sm btn-danger">
                                         <i class="fas fa-times me-1"></i>Cancel
