--- a/templates/teams/invitation_list.html
+++ b/templates/teams/invitation_list.html
@@ -10,7 +10,7 @@
             <h1 class="mb-2">Team Invitations</h1>
             <p class="text-muted mb-0">Manage your team invitations</p>
         </div>
-        <a href="{% url 'team_list' %}" class="btn btn-outline-secondary">
+        <a href="{% url 'teams:team_list' %}" class="btn btn-outline-secondary">
             <i class="fas fa-arrow-left me-2"></i>Back to Teams
         </a>
     </div>
