--- a/templates/teams/team_list.html
+++ b/templates/teams/team_list.html
@@ -27,13 +27,13 @@
                         </h5>
                         <p class="card-text text-muted">Invited by {{ invitation.invited_by.username }}</p>
                         <div class="mt-3">
-                            <form method="post" action="{% url 'accept_invitation' invitation_id=invitation.id %}" class="d-inline">
+                            <form method="post" action="{% url 'teams:accept_invitation' invitation_id=invitation.id %}" class="d-inline">
                                 {% csrf_token %}
                                 <button type="submit" class="btn btn-success btn-sm">
                                     <i class="fas fa-check me-1"></i>Accept
                                 </button>
                             </form>
-                            <form method="post" action="{% url 'reject_invitation' invitation_id=invitation.id %}" class="d-inline">
+                            <form method="post" action="{% url 'teams:reject_invitation' invitation_id=invitation.id %}" class="d-inline">
                                 {% csrf_token %}
                                 <button type="submit" class="btn btn-danger btn-sm">
                                     <i class="fas fa-times me-1"></i>Reject
